Upgrade Java to 21 (LTS) and update Dockerfile
- Updated pom.xml Java version from 17 to 21
- Applied OpenRewrite recipe org.openrewrite.java.migrate.UpgradeToJava21
- Migrated code to use Java 21 features (SequencedCollection, StringFormatted)
- Updated Dockerfile to use Java 21 in both build and runtime stages
- All tests passing (46/46)
- No behavior changes detected
- No critical CVEs introduced