@@ -52,7 +52,7 @@ public class PdfGeneratorService {
         Paragraph summary = new Paragraph();
         summary.add(new Chunk("Summary:\n", headerFont));
         summary.add(new Chunk("Total Receipts: " + receipts.size() + "\n", regularFont));
-        summary.add(new Chunk("Total Amount: $" + String.format("%.2f", totalAmount) + "\n", regularFont));
+        summary.add(new Chunk("Total Amount: $" + "%.2f".formatted(totalAmount) + "\n", regularFont));
         summary.setSpacingAfter(20);
         document.add(summary);
 
@@ -79,8 +79,8 @@ public class PdfGeneratorService {
             addTableRow(table, 
                 receipt.getReceipt().getReceiptDate(),
                 receipt.getReceipt().getDescription(),
-                String.format("$%.2f", receipt.getReceipt().getAmount()),
-                String.format("$%.2f", receipt.getPortion()),
+                    "$%.2f".formatted(receipt.getReceipt().getAmount()),
+                    "$%.2f".formatted(receipt.getPortion()),
                 receipt.getReceipt().getId().toString(),
                 tableDataFont
             );
